--- a/src/styles/CartItem.css
+++ b/src/styles/CartItem.css
@@ -1,1 +1,25 @@
-
+.cartitem {
+    width: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 10px;
+    padding: 5px 10px;
+    border-bottom: 1px solid #ececec;
+  }
+  .cartitem .image {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+  }
+  .cartitem .price,
+  .cartitem .total {
+    font-weight: 600;
+  }
+  .cartitem .quantity {
+    display: flex;
+  }
+  .cartitem .quantity input{
+    width: 25px;
+    text-align: center;
+  }
