--- a/src/styles/LoginForm.css
+++ b/src/styles/LoginForm.css
@@ -1,1 +1,41 @@
-
+.formContainer {
+   width: 500px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-direction: column;
+}
+.formContainer .title {
+    
+}
+  
+.formContainer .form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
+}
+.formContainer .form input:focus,
+.formContainer .form button:focus {
+    outline: none;
+}
+.formContainer .form input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border-radius: 3px;
+    border: 1px solid #9966ff;
+}
+.formContainer .form button {
+   width: 100%;
+   padding: 10px;
+   font-size: 20px;
+   color: white;
+   background-color: #9966ff;
+   border: 1px solid #9966ff;
+   outline: none;
+   font-weight: 700;
+   border-radius: 3px;
+   cursor: pointer;
+}
